--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"new": "cpp",
 		"ostream": "cpp",
-		"iostream": "cpp"
+		"iostream": "cpp",
+		"chrono": "cpp",
+		"initializer_list": "cpp"
 	}
 }
